# Steer-SAO

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
configs/: train_all_controls.yaml
docs/: architecture.md  linux_gpu_start.md
scripts/: __init__.py  gradio_app.py
src/steer_sao/: __init__.py  adapters.py  alignment.py  audio.py  checkpoints.py  cli.py  controls.py  datasets.py  guidance.py  manifest.py  model.py  types.py
src/steer_sao/training/: __init__.py  trainer.py
tests/: test_adapter_install.py  test_adapters.py  test_alignment.py  test_checkpoints.py  test_controls.py  test_guidance.py  test_manifest.py
