[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "steer-sao"
version = "0.1.0"
description = "Stable Audio 3 MuseControlLite-style adapters for controllable music generation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Steer-SAO contributors" }]
dependencies = [
  "stable-audio-3 @ git+https://github.com/Stability-AI/stable-audio-3.git@fef6d875fbc7166d2e9daae035279a1c70ee3d61",
  "torch==2.7.1",
  "torchaudio==2.7.1",
  "numpy>=2.2.6",
  "soundfile>=0.13.1",
  "safetensors>=0.7.0",
  "einops>=0.8.2",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.9",
]
data = [
  "datasets>=4.0.0",
]
train = [
  "pytorch-lightning==2.5.5",
  "wandb>=0.22.0",
]

[project.scripts]
steer-sao = "steer_sao.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/steer_sao"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"
